# bfb-llm-as-judge

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
analysis/: compare_judge_scores_by_trace.py  compare_judges_to_groundtruth.py  verify_judge_completeness.py
bash_scripts_run_nvidia_grader/: README.md  launch_sonnet46_all_tenacity_from_pid.sh  launch_sonnet46_supervisors_from_pid.sh  launch_trace_all_tenacity_from_pid.sh  launch_trace_mistral_tenacity_from_pid.sh  launch_trace_supervisors_from_pid.sh  queue_all_traces_tenacity_from_pid.sh  queue_judge_after_active_tenacity_from_pid.sh  queue_judge_traces_tenacity_from_pid.sh  queue_traces_after_current_tenacity_from_pid.sh  start_all_parallel.sh  start_all_tenacity_parallel.sh  start_all_traces_parallel.sh  start_judge_parallel.sh  start_judge_tenacity_parallel.sh  start_llama_parallel.sh  start_llama_tenacity_parallel.sh  start_mistral_parallel.sh  start_mistral_tenacity_parallel.sh  start_nemotron_parallel.sh  start_nemotron_tenacity_parallel.sh  start_qwen_parallel.sh  start_qwen_tenacity_parallel.sh  supervise_trace_judge_tenacity_from_pid.sh
big_finance_harness/: agent.py  grader.py  prompts.py  resumption.py  trace.py  types.py
data/: DATASHEET.md  LICENSE-DATA  README.md  big_finance_subset.jsonl  chosen_sample.csv
scripts/: build_analysis_csv.py  build_plots.py  clean_llama_grades.py  clean_nemotron_grades.py  clean_qwen_grades.py  dedupe_grades.py  headline_table.py  nvidia_gemma_inference.py  nvidia_grade_concurrent.py  nvidia_inference.py  nvidia_llama_3_3_70b.py  nvidia_mistral_medium_3_5.py  nvidia_nemotron_3_nano_omni.py  nvidia_qwen3_next_80b.py  (+12 more)
(+75 files in other folders)
