[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "big-finance-harness"
version = "1.0.0"
description = "Lightweight evaluation scaffold for the Big Finance benchmark."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Rogo Technologies", email = "alexwang@rogo.ai" },
    { name = "Alex Wang", email = "alexwang@rogo.ai" },
    { name = "Georg Meinhardt" },
    { name = "Jacob Katz" },
    { name = "Joseph H. Kim" },
    { name = "Pratyush K. Chaudhary" },
    { name = "Chase Blagden" },
    { name = "Eric Xu" },
]
dependencies = [
    "litellm==1.83.7",
    "google-cloud-aiplatform==1.133.0",
    "google-auth==2.50.0",
    "pydantic==2.12.5",
    "httpx==0.28.1",
    "beautifulsoup4==4.13.3",
    "lxml==6.1.0",
    "rank-bm25==0.2.2",
    "pymupdf==1.27.2.3",
    "tiktoken==0.12.0",
    "click==8.1.8",
    "tenacity==9.1.2",
]

[project.optional-dependencies]
# Required by `scripts/build_plots.py`. The eval/grade pipeline and the
# CSV/aggregation scripts (build_analysis_csv, headline_table, recompute_costs)
# work without them.
analysis = [
    "pandas==2.3.3",
    "matplotlib==3.10.9",
]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==0.25.0",
    "pytest-httpx==0.35.0",
    "ruff==0.13.0",
]

[tool.setuptools]
packages = ["big_finance_harness", "big_finance_harness.models", "big_finance_harness.tools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
